# olime_backend_v2

./: .gitignore  Pipfile  README.md  db.sqbpro  db.sqlite3  pyproject.toml
app/: settings.py  urls.py
content_star_points/: apps.py  serializers.py  urls.py  views.py
contents/: apps.py  serializers.py  urls.py  views.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_track_completion_track_id.py  0002_user_data_task_id.py
profiles/: views.py
task/: serializers.py  urls.py  views.py
task_star_points/: apps.py  serializers.py  urls.py  views.py
track/: serializers.py  urls.py  views.py
track_completions/: apps.py  serializers.py  urls.py  views.py
track_star_points/: apps.py  serializers.py  urls.py  views.py
userdata/: serializers.py  urls.py  views.py
